# Format-Boy.Cam

./: .gitignore  .vercelignore  GITHUB_RELEASES_SETUP.md  QUICK_START.md  VERCEL_CONFIG.md  package-lock.json  repl2.js  repl3.js  repl4.js  repl5.js
.github/workflows/: release.yml
app/: .env  .env.example  .vercelignore  README.md  index.html  package-lock.json  package.json  tmp-flw-form.html  vite.config.ts
app/api/: credit-utils.ts  credits.ts  end-session.ts  rate.ts  session-status.ts  start-session.ts  supabase.ts  version.ts  wallet.ts
app/api/auth/: resolve-user.ts
app/api/payment/: flutterwave-init.ts  flutterwave-verify.ts  flutterwave-webhook.ts  paystack-init.ts  paystack-verify.ts  paystack-webhook.ts
app/electron/: main.js  updater.js
app/src/: App.tsx  index.css
app/src/components/: Navigation.tsx  PaymentModal.tsx  Sidebar.tsx  UpdateModal.tsx
app/src/context/: AppContext.tsx  AuthContext.tsx
app/src/lib/: api-client.ts  app-version.ts  auth.ts  desktop-updater.ts  routes.ts  supabase.ts  utils.ts
app/src/pages/: AuthCallback.tsx  Dashboard.tsx  Login.tsx  PaymentSuccess.tsx  PreviewWindow.tsx  Settings.tsx  Subscription.tsx  Wallet.tsx
app/src/services/: VirtualCameraService.ts  api.ts  mockApi.ts
native-camera/: CMakeLists.txt  formatboy_ids.h  formatboy_protocol.h
native-camera/ds_filter/: FormatBoyVirtualCamera.def  dllmain_ds.cpp  ds_virtual_camera.cpp  ds_virtual_camera.h
native-camera/mf_source/: FormatBoyVirtualCameraMF.def  dllmain.cpp  mf_virtual_camera_source.cpp  mf_virtual_camera_source.h
native-camera/publisher/: formatboy_publisher.cpp  formatboy_publisher.h  main.cpp
native-camera/registrar/: main.cpp  mf_smoke.cpp
supabase/: credit_system_migration.sql  migration.sql  paystack_reference_migration.sql  seed_plans.sql  setup_schema.sql
